tests/modules/errors/invalid_names.nfu
import value from "/absolute/path"
import value from "~/home/path"
import value from "invalid.extension"
import value from "123invalid"
